Ajout de la documentation technique pour les classes CSS des champs de texte

--- a/src/sdg/bases/form/TextField/_base-textField.html
+++ b/src/sdg/bases/form/TextField/_base-textField.html
@@ -191,3 +191,68 @@
 
     </script>
 </qc-doc-exemple>
+
+<h3>Documentation technique</h3>
+
+<h4>Classes CSS</h4>
+<div class="table-overflow">
+    <table class="qc-table qc-striped component-attributes-description">
+        <thead>
+        <tr>
+            <th>Nom</th>
+            <th>Description</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td><code>qc-textfield-container</code></td>
+            <td>Conteneur principal du champ de texte, incluant le libellé, le champ et les messages d’erreur.</td>
+        </tr>
+        <tr>
+            <td><code>qc-textfield</code></td>
+            <td>Boîte englobante du champ de saisie (input ou textarea), stylisée selon l’état et la taille.</td>
+        </tr>
+        <tr>
+            <td><code>qc-textfield--sm</code>, <code>--md</code>, <code>--lg</code>, <code>--xl</code>, <code>--xxl</code></td>
+            <td>Classes de taille qui définissent la largeur maximale du champ.</td>
+        </tr>
+        <tr>
+            <td><code>qc-textfield-row</code></td>
+            <td>Disposition horizontale de plusieurs champs de texte côte à côte.</td>
+        </tr>
+        <tr>
+            <td><code>qc-textfield-description</code></td>
+            <td>Texte descriptif affiché sous le label pour donner des instructions ou du contexte.</td>
+        </tr>
+        <tr>
+            <td><code>qc-textfield-required</code></td>
+            <td>Indicateur visuel (astérisque rouge) pour les champs obligatoires.</td>
+        </tr>
+        <tr>
+            <td><code>qc-textfield-charcount</code></td>
+            <td>Affiche le nombre de caractères restants ou en trop, selon la limite définie.</td>
+        </tr>
+        <tr>
+            <td><code>max-reached</code></td>
+            <td>Appliqué au compteur de caractères lorsque la limite est dépassée.</td>
+        </tr>
+        <tr>
+            <td><code>error</code></td>
+            <td>Appliqué au champ lorsqu’il est invalide (vide ou trop long).</td>
+        </tr>
+        <tr>
+            <td><code>qc-form-error</code></td>
+            <td>Conteneur du message d’erreur affiché sous le champ, incluant l’icône et le texte.</td>
+        </tr>
+        <tr>
+            <td><code>qc-icon</code></td>
+            <td>Icône utilisée dans le message d’erreur, stylisée selon le type.</td>
+        </tr>
+        <tr>
+            <td><code>qc-disabled</code></td>
+            <td>Appliqué au conteneur pour désactiver le champ et ses éléments.</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+
