--- a/src/sdg/bases/form/Checkbox/_base-checkbox.html
+++ b/src/sdg/bases/form/Checkbox/_base-checkbox.html
@@ -3,14 +3,38 @@
 <p>Le composant de case à cocher permet de créer des éléments de formulaire pour la sélection multiple. Il peut être utilisé seul ou en groupe.</p>
 
 <qc-doc-exemple caption="Exemple d’une case à cocher seule obligatoire">
-  <form id="exemple-tos-form">
-    <qc-checkbox
-            id="exemple-une-case"
-            name="consentement"
-            label="J’accepte les conditions d’utilisation"
-            value="oui"
-            required
-    ></qc-checkbox>
+  <form id="base-exemple-tos-form">
+    <div class="qc-checkbox-single">
+      <label class="qc-check-row" for="base-exemple-une-case">
+        <input
+          id="base-exemple-une-case"
+          type="checkbox"
+          value="oui"
+          name="base-consentement"
+          aria-required="true"
+          aria-invalid="false"
+        >
+        <span class="qc-check-text">
+          <span class="qc-check-label">
+            J’accepte les conditions d’utilisation
+            <span class="qc-required">*</span>
+          </span>
+        </span>
+      </label>
+
+      <div class="qc-form-error" role="alert">
+        <div role="img"
+             class="qc-icon"
+             data-img-type="warning"
+             style="--img-color: var(--qc-color-red-regular);
+                    --img-width: 24px;
+                    --img-height: 21px;
+                    display: none;
+                    "
+        ></div>
+        <span class="qc-form-error-message" hidden>Le champ "J'accepte les conditions d'utilisation" est obligatoire.</span>
+      </div>
+    </div>
 
     <button class="btn btn-sm btn-primary"
             type="submit">
@@ -19,8 +43,8 @@
   </form>
 
   <script>
-    const tosForm = document.getElementById("exemple-tos-form");
-    const termsAcceptance = document.getElementById("exemple-une-case")
+    const tosForm = document.getElementById("base-exemple-tos-form");
+    const termsAcceptance = document.getElementById("base-exemple-une-case")
     tosForm.addEventListener("submit", (event) => {
       event.preventDefault();
       if(termsAcceptance.checked) {
@@ -28,11 +52,21 @@
         let alertParts = ["Formulaire soumis avec les données suivantees :"];
         for (const [key, value] of formData.entries()) {
           alertParts.push(`${key} : ${value}`);
-        };
+        }
         alert(alertParts.join("\n"));
       } else {
         termsAcceptance.invalid = true;
+        tosForm.querySelector(".qc-checkbox-single").classList.add("qc-checkbox-single-invalid");
+        tosForm.querySelector(".qc-form-error-message")?.removeAttribute("hidden");
+        tosForm.querySelector(".qc-icon").style.display = "flex";
       }
+    })
+
+    termsAcceptance.addEventListener("change", () => {
+      tosForm.querySelector(".qc-checkbox-single").classList.remove("qc-checkbox-single-invalid");
+      termsAcceptance.invalid = false;
+      tosForm.querySelector(".qc-form-error-message")?.setAttribute("hidden", "");
+      tosForm.querySelector(".qc-icon").style.display = "none";
     })
   </script>
 </qc-doc-exemple>
