--- a/src/sdg/bases/form/Checkbox/_base-checkbox.html
+++ b/src/sdg/bases/form/Checkbox/_base-checkbox.html
@@ -67,69 +67,139 @@
       termsAcceptance.invalid = false;
       tosForm.querySelector(".qc-form-error-message")?.setAttribute("hidden", "");
       tosForm.querySelector(".qc-icon").style.display = "none";
-    })
+    });
   </script>
 </qc-doc-exemple>
 
 <qc-doc-exemple caption="Exemple d’un groupe de cases à cocher avec différents états">
-  <qc-checkbox-group legend="Sélectionnez vos options">
-    <qc-checkbox label="Option 1"></qc-checkbox>
-    <qc-checkbox label="Option 2 cochée par défaut" checked="true"></qc-checkbox>
-    <qc-checkbox label="Option 3 désactivée" disabled="true"></qc-checkbox>
-  </qc-checkbox-group>
+  <fieldset aria-describedby="base-legend-895684" class="qc-fieldset" data-required="true">
+    <legend id="base-legend-895684">Sélectionnez vos options</legend>
+    <div class="qc-field-elements-flex qc-field-elements-flex-sm" style="--column-count: 1;">
+      <label class="qc-check-row" for="base-Option 1-kf8af3zoax">
+        <input type="checkbox" name="base-checkbox-group" value="Option 1" id="base-Option 1-kf8af3zoax" aria-required="false" aria-invalid="false">
+        <span class="qc-check-text">
+          <span class="qc-check-label">Option 1</span>
+        </span>
+      </label>
+
+
+      <label class="qc-check-row" for="base-Option 2 cochée par défaut-6dtqm2cbwna">
+        <input type="checkbox" name="base-checkbox-group" value="Option 2 cochée par défaut" id="base-Option 2 cochée par défaut-6dtqm2cbwna" aria-required="false" aria-invalid="false" checked>
+        <span class="qc-check-text">
+          <span class="qc-check-label">Option 2 cochée par défaut</span>
+        </span>
+      </label>
+
+      <label class="qc-check-row" for="base-Option 3 désactivée-8plxpo1egnp">
+        <input type="checkbox" name="base-checkbox-group" value="Option 3 désactivée" id="base-Option 3 désactivée-8plxpo1egnp" disabled="" aria-required="false" aria-invalid="false">
+        <span class="qc-check-text">
+          <span class="qc-check-label">Option 3 désactivée</span>
+        </span>
+      </label>
+    </div>
+  </fieldset>
 </qc-doc-exemple>
 
 <qc-doc-exemple caption="Exemple d’un groupe de cases à cocher au petit format">
-  <qc-checkbox-group
-          legend="Sélectionnez vos options"
-          name="options"
-          compact
-  >
-    <qc-checkbox value="Option 1"></qc-checkbox>
-    <qc-checkbox value="Option 2"></qc-checkbox>
-    <qc-checkbox value="Option 3"></qc-checkbox>
-  </qc-checkbox-group>
+  <fieldset aria-describedby="base-legend-compact" class="qc-fieldset">
+    <legend id="base-legend-compact">Sélectionnez vos options</legend>
+    <div class="qc-field-elements-flex qc-field-elements-flex-sm" style="--column-count: 1;">
+      <label class="qc-check-row" for="base-Option 1-compact">
+        <input type="checkbox" name="base-checkbox-group" value="Option 1" id="base-Option 1-compact" aria-required="false" aria-invalid="false" class="qc-compact">
+        <span class="qc-check-text">
+          <span class="qc-check-label">Option 1</span>
+        </span>
+      </label>
+
+
+      <label class="qc-check-row" for="base-Option 2 cochée par défaut-compact">
+        <input type="checkbox" name="base-checkbox-group" value="Option 2 cochée par défaut" id="base-Option 2 cochée par défaut-compact" aria-required="false" aria-invalid="false" class="qc-compact">
+        <span class="qc-check-text">
+          <span class="qc-check-label">Option 2 cochée par défaut</span>
+        </span>
+      </label>
+
+      <label class="qc-check-row" for="base-Option 3 désactivée-compact">
+        <input type="checkbox" name="base-checkbox-group" value="Option 3 désactivée" id="base-Option 3 désactivée-compact" aria-required="false" aria-invalid="false" class="qc-compact">
+        <span class="qc-check-text">
+          <span class="qc-check-label">Option 3 désactivée</span>
+        </span>
+      </label>
+    </div>
+  </fieldset>
 </qc-doc-exemple>
 
 <qc-doc-exemple caption="Exemple de validation de formulaire avec des cases à cocher">
-  <form id="checkbox-form">
-    <qc-checkbox-group
-            legend="Sur quelle plateforme consultez-vous www.quebec.ca?"
-            name="ex-checkbox-form"
-            required
-            invalid-text="Veuillez sélectionner une plateforme."
-    >
-      <qc-checkbox
-              label="Ordinateur"
-              value="ordinateur"
-      ></qc-checkbox>
-      <qc-checkbox
-              label="Tablette"
-              value="tablette"
-      ></qc-checkbox>
-      <qc-checkbox
-              label="Téléphone intelligent"
-              value="telephone_intelligent"
-      ></qc-checkbox>
-    </qc-checkbox-group>
+  <form id="base-checkbox-form">
+    <fieldset aria-describedby="id_ex-checkbox-form" class="qc-fieldset" data-required="false">
+      <legend id="id_ex-checkbox-form">
+        Sur quelle plateforme consultez-vous www.quebec.ca?
+        <span class="qc-required" aria-hidden="true">*</span>
+      </legend>
 
-    <qc-checkbox-group
-            legend="Sur quel navigateur consultez-vous www.quebec.ca?"
-            name="ex-checkbox-form-2"
-    >
-      <qc-checkbox
-              label="Chrome"
-              value="chrome"
-      ></qc-checkbox>
-      <qc-checkbox
-              label="Safari"
-              value="safari"
-      ></qc-checkbox>
-      <qc-checkbox
-              label="Firefox"
-              value="firefox"
-      ></qc-checkbox>
-    </qc-checkbox-group>
+      <div class="qc-field-elements-flex qc-field-elements-flex-sm" style="--column-count: 1;">
+        <label class="qc-check-row" for="ex-checkbox-form-ordinateur-base">
+          <input type="checkbox" value="ordinateur" name="base-ex-checkbox-form" id="ex-checkbox-form-ordinateur-base" aria-required="true" aria-invalid="false">
+          <span class="qc-check-text">
+            <span class="qc-check-label">Ordinateur</span>
+          </span>
+        </label>
+
+        <label class="qc-check-row" for="ex-checkbox-form-tablette-base">
+          <input type="checkbox" value="tablette" name="base-ex-checkbox-form" id="ex-checkbox-form-tablette-base" aria-required="true" aria-invalid="false">
+          <span class="qc-check-text">
+            <span class="qc-check-label">Tablette</span>
+          </span>
+        </label>
+
+        <label class="qc-check-row" for="ex-checkbox-form-telephone_intelligent-base">
+          <input type="checkbox" value="telephone_intelligent" name="base-ex-checkbox-form" id="ex-checkbox-form-telephone_intelligent-base" aria-required="true" aria-invalid="false">
+          <span class="qc-check-text">
+            <span class="qc-check-label">Téléphone intelligent</span>
+          </span>
+        </label>
+      </div>
+    </fieldset>
+
+    <div class="qc-form-error" role="alert">
+      <div role="img"
+           class="qc-icon"
+           data-img-type="warning"
+           style="--img-color: var(--qc-color-red-regular);
+                    --img-width: 24px;
+                    --img-height: 21px;
+                    display: none;
+                    "
+      ></div>
+      <span class="qc-form-error-message" hidden>Veuillez sélectionner une plateforme.</span>
+    </div>
+
+    <fieldset aria-describedby="id_ex-checkbox-form-2" class="qc-fieldset">
+      <legend id="id_ex-checkbox-form-2">Sur quel navigateur consultez-vous www.quebec.ca?</legend>
+
+      <div class="qc-field-elements-flex qc-field-elements-flex-sm" style="--column-count: 1;">
+        <label class="qc-check-row" for="ex-checkbox-form-2-chrome-51n8m5rxecg">
+          <input type="checkbox" value="chrome" name="base-ex-checkbox-form-2" id="ex-checkbox-form-2-chrome-51n8m5rxecg" aria-required="false" aria-invalid="false">
+          <span class="qc-check-text">
+            <span class="qc-check-label">Chrome </span>
+          </span>
+        </label>
+
+        <label class="qc-check-row" for="ex-checkbox-form-2-safari-hhai3z61kb8">
+          <input type="checkbox" value="safari" name="base-ex-checkbox-form-2" id="ex-checkbox-form-2-safari-hhai3z61kb8" aria-required="false" aria-invalid="false">
+          <span class="qc-check-text">
+            <span class="qc-check-label">Safari</span>
+          </span>
+        </label>
+
+        <label class="qc-check-row" for="ex-checkbox-form-2-firefox-mjzmiagh4p">
+          <input type="checkbox" value="firefox" name="base-ex-checkbox-form-2" id="ex-checkbox-form-2-firefox-mjzmiagh4p" aria-required="false" aria-invalid="false">
+          <span class="qc-check-text">
+            <span class="qc-check-label">Firefox</span>
+          </span>
+        </label>
+      </div>
+    </fieldset>
 
     <button class="btn btn-sm btn-primary" type="submit">
       Soumettre
@@ -137,28 +207,30 @@
   </form>
 
   <script>
-
     document
-            .getElementById("checkbox-form")
-            .addEventListener("submit", (event) => {
-              event.preventDefault();
-              let doSubmit = true;
-              event.target.querySelectorAll("[required]").forEach(group => {
-                if (!group.checked) {
-                  group.invalid = true;
-                  doSubmit = false;
-                }
-              })
-              if(doSubmit) {
-                alert(
-                        "Formulaire soumis\n"
-                        + Array.from(event.target.querySelectorAll("qc-checkbox-group"))
-                                .map(group => `Valeur pour ${group.name} : ${group.value.join(',')  ? group.value.join(',') : "vide"}`)
-                                .join("\n")
+      .getElementById("base-checkbox-form")
+      .addEventListener("submit", (event) => {
+        event.preventDefault();
+        let doSubmit = true;
+        event.target.querySelectorAll("fieldset[data-required='true']").forEach(group => {
+          if (!group.querySelectorAll("input:checked").length <= 0) {
+            group.querySelectorAll("input").forEach(input => {
+              input.ariaInvalid = true;
+            });
+            doSubmit = false;
+          }
+        })
+        if(doSubmit) {
+          const platformValues = Array.from(event.target.querySelectorAll("input[name='base-ex-checkbox-form']:checked")).map(input => input.value);
+          const browserValues = Array.from(event.target.querySelectorAll("input[name='base-ex-checkbox-form-2']:checked")).map(input => input.value);
 
-                );
-              }
-            })
+          alert(
+            "Formulaire soumis\n"
+                  + `Valeur pour 'Plateforme' : ${platformValues ? platformValues.join(',') : "vide"}`
+                  + `\nValeur pour 'Navigateur' : ${browserValues ? browserValues.join(',') : "vide"}`
+          );
+        }
+      })
   </script>
 </qc-doc-exemple>
 
