Mise à jour de la navigation pour y inclure les boutons

--- a/src/sdg/bases/form/Button/_base-button.html
+++ b/src/sdg/bases/form/Button/_base-button.html
@@ -1,4 +1,4 @@
-<h2 id="buttons">Boutons</h2>
+<h2 id="base-button">Boutons</h2>
 <h3>Exemples</h3>
 
 <qc-doc-exemple caption="Exemples des différentes options de boutons.">
