--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,7 @@
   <h2 class="qc-h4">Version HTML des composants</h2>
   <ul>
     <li><a href="#base-radio-button">Boutons radio</a></li>
+    <li><a href="#base-checkbox">Cases à cocher</a></li>
     <li><a href="#base-champ-texte">Champ texte</a></li>
   </ul>
 </nav>
@@ -3001,7 +3002,7 @@
     <hr />
     <h2 class="qc-h2">Version HTML des composants</h2>
 
-    <h2 id="radio-button">Boutons radio</h2>
+    <h2 id="base-radio-button">Boutons radio</h2>
 <h3>Exemples</h3>
 
 <qc-doc-exemple
@@ -3240,6 +3241,293 @@
         </tr>
         </tbody>
     </table>
+</div>
+    <h2 id="base-checkbox">Cases à cocher</h2>
+
+<p>Le composant de case à cocher permet de créer des éléments de formulaire pour la sélection multiple. Il peut être utilisé seul ou en groupe.</p>
+
+<qc-doc-exemple caption="Exemple d’une case à cocher seule obligatoire">
+  <form id="base-exemple-tos-form">
+    <div class="qc-checkbox-single">
+      <label class="qc-check-row" for="base-exemple-une-case">
+        <input
+          id="base-exemple-une-case"
+          type="checkbox"
+          value="oui"
+          name="base-consentement"
+          aria-required="true"
+          aria-invalid="false"
+        >
+        <span class="qc-check-text">
+          <span class="qc-check-label">
+            J’accepte les conditions d’utilisation
+            <span class="qc-required">*</span>
+          </span>
+        </span>
+      </label>
+
+      <div class="qc-form-error" role="alert">
+        <div role="img"
+             class="qc-icon"
+             data-img-type="warning"
+             style="--img-color: var(--qc-color-red-regular);
+                    --img-width: 24px;
+                    --img-height: 21px;
+                    display: none;
+                    "
+        ></div>
+        <span class="qc-form-error-message" hidden>Le champ "J'accepte les conditions d'utilisation" est obligatoire.</span>
+      </div>
+    </div>
+
+    <button class="btn btn-sm btn-primary"
+            type="submit">
+      S'inscrire
+    </button>
+  </form>
+
+  <script>
+    const baseTosForm = document.getElementById("base-exemple-tos-form");
+    const baseTermsAcceptance = document.getElementById("base-exemple-une-case")
+    baseTosForm.addEventListener("submit", (event) => {
+      event.preventDefault();
+      if(baseTermsAcceptance.checked) {
+        const formData = new FormData(event.target);
+        let alertParts = ["Formulaire soumis avec les données suivantees :"];
+        for (const [key, value] of formData.entries()) {
+          alertParts.push(`${key} : ${value}`);
+        }
+        alert(alertParts.join("\n"));
+      } else {
+        baseTermsAcceptance.invalid = true;
+        baseTosForm.querySelector(".qc-checkbox-single").classList.add("qc-checkbox-single-invalid");
+        baseTosForm.querySelector(".qc-form-error-message")?.removeAttribute("hidden");
+        baseTosForm.querySelector(".qc-icon").style.display = "flex";
+      }
+    })
+
+    baseTermsAcceptance.addEventListener("change", () => {
+      baseTosForm.querySelector(".qc-checkbox-single").classList.remove("qc-checkbox-single-invalid");
+      baseTermsAcceptance.invalid = false;
+      baseTosForm.querySelector(".qc-form-error-message")?.setAttribute("hidden", "");
+      baseTosForm.querySelector(".qc-icon").style.display = "none";
+    });
+  </script>
+</qc-doc-exemple>
+
+<qc-doc-exemple caption="Exemple d’un groupe de cases à cocher avec différents états">
+  <fieldset aria-describedby="base-legend-895684" class="qc-fieldset" data-required="true">
+    <legend id="base-legend-895684">Sélectionnez vos options</legend>
+    <div class="qc-field-elements-flex qc-field-elements-flex-sm" style="--column-count: 1;">
+      <label class="qc-check-row" for="base-Option 1-kf8af3zoax">
+        <input type="checkbox" name="base-checkbox-group" value="Option 1" id="base-Option 1-kf8af3zoax" aria-required="false" aria-invalid="false">
+        <span class="qc-check-text">
+          <span class="qc-check-label">Option 1</span>
+        </span>
+      </label>
+
+
+      <label class="qc-check-row" for="base-Option 2 cochée par défaut-6dtqm2cbwna">
+        <input type="checkbox" name="base-checkbox-group" value="Option 2 cochée par défaut" id="base-Option 2 cochée par défaut-6dtqm2cbwna" aria-required="false" aria-invalid="false" checked>
+        <span class="qc-check-text">
+          <span class="qc-check-label">Option 2 cochée par défaut</span>
+        </span>
+      </label>
+
+      <label class="qc-check-row" for="base-Option 3 désactivée-8plxpo1egnp">
+        <input type="checkbox" name="base-checkbox-group" value="Option 3 désactivée" id="base-Option 3 désactivée-8plxpo1egnp" disabled="" aria-required="false" aria-invalid="false">
+        <span class="qc-check-text">
+          <span class="qc-check-label">Option 3 désactivée</span>
+        </span>
+      </label>
+    </div>
+  </fieldset>
+</qc-doc-exemple>
+
+<qc-doc-exemple caption="Exemple d’un groupe de cases à cocher au petit format">
+  <fieldset aria-describedby="base-legend-compact" class="qc-fieldset">
+    <legend id="base-legend-compact">Sélectionnez vos options</legend>
+    <div class="qc-field-elements-flex qc-field-elements-flex-sm" style="--column-count: 1;">
+      <label class="qc-check-row" for="base-Option 1-compact">
+        <input type="checkbox" name="base-checkbox-group" value="Option 1" id="base-Option 1-compact" aria-required="false" aria-invalid="false" class="qc-compact">
+        <span class="qc-check-text">
+          <span class="qc-check-label">Option 1</span>
+        </span>
+      </label>
+
+
+      <label class="qc-check-row" for="base-Option 2 cochée par défaut-compact">
+        <input type="checkbox" name="base-checkbox-group" value="Option 2 cochée par défaut" id="base-Option 2 cochée par défaut-compact" aria-required="false" aria-invalid="false" class="qc-compact">
+        <span class="qc-check-text">
+          <span class="qc-check-label">Option 2 cochée par défaut</span>
+        </span>
+      </label>
+
+      <label class="qc-check-row" for="base-Option 3 désactivée-compact">
+        <input type="checkbox" name="base-checkbox-group" value="Option 3 désactivée" id="base-Option 3 désactivée-compact" aria-required="false" aria-invalid="false" class="qc-compact">
+        <span class="qc-check-text">
+          <span class="qc-check-label">Option 3 désactivée</span>
+        </span>
+      </label>
+    </div>
+  </fieldset>
+</qc-doc-exemple>
+
+<qc-doc-exemple caption="Exemple de validation de formulaire avec des cases à cocher">
+  <form id="base-checkbox-form">
+    <fieldset aria-describedby="id_ex-checkbox-form" class="qc-fieldset" data-required="false">
+      <legend id="id_ex-checkbox-form">
+        Sur quelle plateforme consultez-vous www.quebec.ca?
+        <span class="qc-required" aria-hidden="true">*</span>
+      </legend>
+
+      <div class="qc-field-elements-flex qc-field-elements-flex-sm" style="--column-count: 1;">
+        <label class="qc-check-row" for="ex-checkbox-form-ordinateur-base">
+          <input type="checkbox" value="ordinateur" name="base-ex-checkbox-form" id="ex-checkbox-form-ordinateur-base" aria-required="true" aria-invalid="false">
+          <span class="qc-check-text">
+            <span class="qc-check-label">Ordinateur</span>
+          </span>
+        </label>
+
+        <label class="qc-check-row" for="ex-checkbox-form-tablette-base">
+          <input type="checkbox" value="tablette" name="base-ex-checkbox-form" id="ex-checkbox-form-tablette-base" aria-required="true" aria-invalid="false">
+          <span class="qc-check-text">
+            <span class="qc-check-label">Tablette</span>
+          </span>
+        </label>
+
+        <label class="qc-check-row" for="ex-checkbox-form-telephone_intelligent-base">
+          <input type="checkbox" value="telephone_intelligent" name="base-ex-checkbox-form" id="ex-checkbox-form-telephone_intelligent-base" aria-required="true" aria-invalid="false">
+          <span class="qc-check-text">
+            <span class="qc-check-label">Téléphone intelligent</span>
+          </span>
+        </label>
+      </div>
+    </fieldset>
+
+    <div class="qc-form-error" role="alert">
+      <div role="img"
+           class="qc-icon"
+           data-img-type="warning"
+           style="--img-color: var(--qc-color-red-regular);
+                    --img-width: 24px;
+                    --img-height: 21px;
+                    display: none;
+                    "
+      ></div>
+      <span class="qc-form-error-message" hidden>Veuillez sélectionner une plateforme.</span>
+    </div>
+
+    <fieldset aria-describedby="id_ex-checkbox-form-2" class="qc-fieldset">
+      <legend id="id_ex-checkbox-form-2">Sur quel navigateur consultez-vous www.quebec.ca?</legend>
+
+      <div class="qc-field-elements-flex qc-field-elements-flex-sm" style="--column-count: 1;">
+        <label class="qc-check-row" for="ex-checkbox-form-2-chrome-51n8m5rxecg">
+          <input type="checkbox" value="chrome" name="base-ex-checkbox-form-2" id="ex-checkbox-form-2-chrome-51n8m5rxecg" aria-required="false" aria-invalid="false">
+          <span class="qc-check-text">
+            <span class="qc-check-label">Chrome </span>
+          </span>
+        </label>
+
+        <label class="qc-check-row" for="ex-checkbox-form-2-safari-hhai3z61kb8">
+          <input type="checkbox" value="safari" name="base-ex-checkbox-form-2" id="ex-checkbox-form-2-safari-hhai3z61kb8" aria-required="false" aria-invalid="false">
+          <span class="qc-check-text">
+            <span class="qc-check-label">Safari</span>
+          </span>
+        </label>
+
+        <label class="qc-check-row" for="ex-checkbox-form-2-firefox-mjzmiagh4p">
+          <input type="checkbox" value="firefox" name="base-ex-checkbox-form-2" id="ex-checkbox-form-2-firefox-mjzmiagh4p" aria-required="false" aria-invalid="false">
+          <span class="qc-check-text">
+            <span class="qc-check-label">Firefox</span>
+          </span>
+        </label>
+      </div>
+    </fieldset>
+
+    <button class="btn btn-sm btn-primary" type="submit">
+      Soumettre
+    </button>
+  </form>
+
+  <script>
+    document
+      .getElementById("base-checkbox-form")
+      .addEventListener("submit", (event) => {
+        event.preventDefault();
+        let doSubmit = true;
+        event.target.querySelectorAll("fieldset[data-required='true']").forEach(group => {
+          if (!group.querySelectorAll("input:checked").length <= 0) {
+            group.querySelectorAll("input").forEach(input => {
+              input.ariaInvalid = true;
+            });
+            doSubmit = false;
+          }
+        })
+        if(doSubmit) {
+          const platformValues = Array.from(event.target.querySelectorAll("input[name='base-ex-checkbox-form']:checked")).map(input => input.value);
+          const browserValues = Array.from(event.target.querySelectorAll("input[name='base-ex-checkbox-form-2']:checked")).map(input => input.value);
+
+          alert(
+            "Formulaire soumis\n"
+                  + `Valeur pour 'Plateforme' : ${platformValues ? platformValues.join(',') : "vide"}`
+                  + `\nValeur pour 'Navigateur' : ${browserValues ? browserValues.join(',') : "vide"}`
+          );
+        }
+      })
+  </script>
+</qc-doc-exemple>
+
+
+<h3>Documentation technique</h3>
+
+<h4>Classes</h4>
+<div class="table-overflow">
+  <table class="qc-table qc-striped component-attributes-description">
+    <thead>
+    <tr>
+      <th>Nom de classe ou variable</th>
+      <th>Description des propriétés</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+      <td>qc-fieldset</td>
+      <td>Disposition des éléments <code>fieldset</code> et leur contenu</td>
+    </tr>
+    <tr>
+      <td>qc-field-elements-flex</td>
+      <td>Affiche les éléments du fieldset en disposition <code>flex</code> sur colonne</td>
+    </tr>
+    <tr>
+      <td>qc-field-elements-flex-sm</td>
+      <td>Spécifie l'espacement entre les éléments de <code>fieldset</code> au token `small`</td>
+    </tr>
+    <tr>
+      <td>qc-check-row</td>
+      <td>Taille et disposition des cases à cocher et leurs libellés</td>
+    </tr>
+    <tr>
+      <td>qc-check-text</td>
+      <td>Disposition des libellés et de leurs descriptions (pour les boutons de sélection)</td>
+    </tr>
+    <tr>
+      <td>qc-check-label</td>
+      <td>Affiche le libellé en gras</td>
+    </tr>
+    <tr>
+      <td>qc-compact</td>
+      <td>Affiche la case à cocher au format compact</td>
+    </tr>
+    <tr>
+      <td>--column-count</td>
+      <td>
+        Nombre de colonnes pour un affichage en grille des cases à cocher
+        <br>Note : À utiliser pour les boutons de sélection seulement
+      </td>
+    </tr>
+    </tbody>
+  </table>
 </div>
 
     <h2 id="base-champ-texte">Champ texte</h2>
